--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,33 @@
+mybatis:
+  mapper-locations: mybatis/**/*.xml
+  configuration:
+    map-underscore-to-camel-case: true
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+
+spring:
+  datasource:
+    url: jdbc:mariadb://localhost:3306/minicampus
+    driver-class-name: org.mariadb.jdbc.Driver
+    username: minicampus_user
+    password: a1234
+
+
+  jpa:
+    generate-ddl: true
+    hibernate:
+
+      ddl-auto: update
+    show-sql: true
+
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: tmdds1120@gmail.com
+    password: uqaulaajzbytfagn
+    properties:
+      mail:
+        smtp:
+          starttls:
+            enable: true
 
